Update index.html,onderaan de file praktische info

--- a/Week_4/index.html
+++ b/Week_4/index.html
@@ -141,3 +141,5 @@
         </script>
     </body>
 </html>
+// Sorry voor het wederom niet gebruiken van functies, ik had geen tijd meer om het te vragen en kwam er zelf niet uit.
+// Volgende keer zorg ik ervoor dat deze aanwezig zijn!!
