--- a/Week_6/linkedviews.html
+++ b/Week_6/linkedviews.html
@@ -5,7 +5,7 @@
         <h3>12444049</h3>
         <h2>Unemployment Rate per Country</h2>
         <title>Linked Views</title>
-         <a href="http://data.oecd.org/unemp/unemployment-rate.htm#indicator-chart"
+         <a href="https://data.oecd.org/unemp/unemployment-rate.htm#indicator-chart"
          >Dataset Unemployment Rate</a><br>
         <meta charset="utf-8">
         <script type="text/javascript"
